--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <select id="modelSelector">
       <option value="gemini-2.5-pro">Gemini 2.5 Pro</option>
       <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
+      <option value="gemini-2.5-flash-lite">Gemini 2.5 Flash Lite</option>
 
 
-      <option value="gemini-2.0-flash">Gemini 2.0 Flash</option>
-      <option value="gemini-2.5-pro-exp-03-25">Gemini 2.5 Pro Exp 03-25</option>
+      <!-- <option value="gemini-2.0-flash">Gemini 2.0 Flash</option> -->
+      <!-- <option value="gemini-2.5-pro-exp-03-25">Gemini 2.5 Pro Exp 03-25</option> -->
       <!-- <option value="gemini-2.5-pro-preview-03-25">Gemini 2.5 Pro Preview 03-25</option> -->
       <!-- gemini-2.5-pro-preview-03-25 不免费 -->
-      <option value="gemini-2.0-flash-thinking-exp-01-21">Gemini 2.0 Flash Thinking Experimental 01-21</option>
+      <!-- <option value="gemini-2.0-flash-thinking-exp-01-21">Gemini 2.0 Flash Thinking Experimental 01-21</option> -->
       <!-- <option value="gemini-2.0-flash-exp-image-generation">Gemini 2.0 Flash Image Generation Experimental</option> -->
       <!-- gemini-2.0-flash-exp-image-generation 已经在“生成图片”中默认使用 -->
     </select>
